# syfala

./: .gitignore  .gitmodules  Makefile  README.md  all-export.tcl  index.html  makefile.env  sitemap.xml  syfala.tcl
PCB/ControllerBoard/: BOM.xlsx  README.md  controllerBoard.kicad_pcb  controllerBoard.kicad_pro  controllerBoard.kicad_sch  controllerBoard.pro  controllerBoard.sch
PCB/TheLine/: TheLine.kicad_pcb  TheLine.kicad_pro  TheLine.kicad_sch  updated_BOM.xls
config/: boards.mk  runtime-parameters.mk  sources.mk  utilities.mk  xilinx.mk
config/config-python/: README.md  pyproject.toml
config/config-python/syfala_config/: __main__.py  utils.py
config/designs/: ethernet-audio.mk  multisample.mk  sigma-delta.mk  tdm.mk  template.mk
config/linux/: alpine-packages.mk  boot.mk  linux.mk  root.mk
config/targets/: cpp.mk  faust.mk  faust2vhdl.mk  pd.mk  vhdl.mk
doc/: README_maj_2020.txt  dependencies.md  help.txt  linux-developers.md  linux-getting-started.md  reference.md  syfala-make.md  syfala-reference.md  using-syfala-containers.md
doc/syfala-getting-started-src/: Makefile  body-install-toolchain.tex  developer-doc.tex  developer-doc.toc  install-toolchain.tex  known-bugs.tex  sin-example.tex  sinewave-biquad-inlined.cpp  syfala-getting-started.bib  syfala-getting-started.tex  syfala-team.tex
doc/tutorials/: cpp-tutorial-advanced.md  getting-started-faust.md
docs/: 404.html  index.html  sitemap.xml
docs/css/: bootstrap.min.css
examples/: WFS.dsp  bypass_sine.dsp  fir.dsp  flanger.dsp  lms_live.dsp  minimoog-novation.dsp  mp_fxlms.dsp  multiVirtualAnalog.dsp  osc-li-int.dsp  osc-spline-int.dsp  phasor.dsp  quadVirtualAnalog.dsp  radial.lib  sh_fxlms.dsp  sinewave-biquad-inlined-440-v5.1.dsp  sinewave-biquad-inlined-59.dsp  sinewave-biquad-inlined.dsp  synthtest.dsp  vanalog32.dsp  virtualAnalog.dsp  virtualAnalogStatic.dsp  ylm.lib
examples/cpp/: bypass.cpp  bypass_multisample.cpp  fir.cpp  fir_multisample.cpp  fir_multisample_dataflow.cpp
examples/faust/: 440volume.dsp  FIRTest.dsp  NLMSTestToRoundtripOnFPGA.dsp  WFS.dsp  birds.dsp  bypass_sine.dsp  dist.dsp  fm.dsp  (+27 more)
faust/: bell.dsp  bypass.dsp  clarinet.dsp  echo.dsp  fast-demo.dsp  sinewave-biquad-inlined-440.dsp  sinewave-biquad-inlined-trigger.dsp  sinewave-biquad-inlined-two.dsp
include/: syconfig.hpp
js/: bootstrap.min.js
scripts/: application.tcl  bin_generator.bif  faust2vhdl.tcl  flash.tcl  hls.tcl  jtag.tcl  prebuild.tcl  preprocessor.tcl  project.tcl  project_generator.tcl  syfala_maker.tcl  syfala_maker_utils.tcl  sylib.tcl  synthesis.tcl
search/: search_index.json
smc-tests/: README.txt  script-smc-bell.bash
source/linux/ethernet/client/: Cargo.toml  build.rs
source/linux/ethernet/client/src/: connection.rs  hls_const.rs  main.rs  tcp.rs  udp.rs
source/linux/ethernet/client/src/axi/: axilite.rs  mod.rs  ram.rs
source/linux/ethernet/server/: Cargo.toml
source/linux/ethernet/server/src/: audio_server.rs  main.rs  sockets.rs
source/linux/syfala-client/: Cargo.toml
source/linux/syfala-client/src/: main.rs
source/linux/syfala-client/src/ethernet/: README.md  build.sh  connection.rs  mod.rs  perf.rs  tcp.rs  udp.rs
source/linux/syfala-client/src/ethernet/axi/: axilite.rs  mod.rs  ram.rs
syfala/: Makefile  arm.cpp  configFAUST.h  fpga.cpp  version
testbenches/: README.md
tests/: tests.tcl
tools/: all-export.tcl  inventory.md  printSyfalaGraph.sh  print_reports.sh
tools/hls2csv/: Cargo.toml  README.md
tools/hls2csv/src/: csv.rs  main.rs  markdown.rs  parser.rs  syfala.rs
tools/hls2csv/src/report/: latency.rs  mod.rs  resources.rs
web/: Makefile
(+828 files in other folders)
