[package]
name = "syfala-load"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
serde_json = "1.0.96"

[features]
ethernet = []

[dependencies]
sysinfo = "0.30.5"
shared = { path = "../syfala-shared" }
clap = {version = "4.3.17", features = ["derive"]}

libc = "0.2.82"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["full"] }
tokio-stream = { version = "0.1" }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.40"
bytes = "1.4.0"
serde_json = "1.0.96"
futures = "0.3.28"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }


