[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jack = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["full"] }
tokio-stream = { version = "0.1" }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.28"
serde_json = "1.0.97"
thiserror = "1.0.40"
bytes = "1.4.0"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
clap = {version = "4.3.17", features = ["derive"]}
shared = { path = "../shared" }